rest service and tests